gccida/g2/assemble_start_function
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_start_function/src/varasm.c:1688:24: error: use of undeclared identifier 'off_70902E'
fprintf( asm_out_file, off_70902E, 6567950LL); 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_start_function/src/obj/varasm.o] Error 1
